# activation-probes-claim-correctness

./: .gitignore  LICENSE  README.md  pyproject.toml  study_protocol.md
configs/: compute.yaml  dataset.yaml  probes.yaml  prompts.yaml  report.yaml
demo/: README.md  build_examples.py  probe_calibration.json
docs/: abstract_v1.md  annotation_guidelines.md  annotation_workflow.md  factscore_validation.md  felm_matched_generation.md  felm_matched_generation_repair.md  felm_validation.md  human_audit_protocol.md  judge_proxy_workflow.md  library_design_notes.md  maud_baseline_workflow.md  maud_paper_draft.md  methods_note_bootstrap.md  next_steps.md  paper_blog.html  paper_defensible_claims.md  paper_draft.md  paper_references.bib  paper_writing_plan.md  phase0_findings.md  pilot_readiness_findings.md  probe_interpretation.md  probe_interpretation_gate.md  release_checklist.md  release_precleanup_manifest.md  second_judge_findings.md  second_judge_model_choice.md  training_intervention_design.md
scripts/: analyze_maud_human_audit.py  analyze_second_judge_sensitivity.py  bootstrap_maud_ci.py  build_annotation_packet.py  build_canonical_claims.py  build_maud_human_audit_packet.py  check_factscore_token_alignment.py  check_pilot_readiness.py  compute_bootstrap_ci.py  compute_transfer_bootstrap_ci.py  evaluate_annotation_pilot.py  evaluate_baselines_against_labels.py  evaluate_factscore_validation.py  evaluate_felm_validation.py  evaluate_probe_proxy_smoke.py  evaluate_study.py  export_annotator_packets.py  export_disagreement_packet.py  export_example_subset.py  (+47 more)
(+216 files in other folders)
