[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interp-experiment"
version = "0.1.0"
description = "Claim-level uncertainty comparison for legal contract QA."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
data = [
  "datasets>=3.2",
  "huggingface-hub>=0.28",
  "pandas>=2.2",
]
inference = [
  "accelerate>=1.2",
  "torch>=2.5",
  "transformers>=4.48",
]
interp = [
  "sae-lens>=6.0",
  "transformer-lens>=2.11",
]
modal = [
  "modal>=1.3",
]
text = [
  "sentence-transformers>=3.3",
]
all = [
  "datasets>=3.2",
  "huggingface-hub>=0.28",
  "pandas>=2.2",
  "accelerate>=1.2",
  "torch>=2.5",
  "transformers>=4.48",
  "sae-lens>=6.0",
  "transformer-lens>=2.11",
  "modal>=1.3",
  "sentence-transformers>=3.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
